# notes-player

./: .gitignore  .mcp.json  README.md  pyproject.toml
src/notes_player/: server.py
