[project]
name = "notes-player"
version = "0.1.0"
description = "Tiny educational MCP server that plays musical notes through the speakers (macOS)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["mcp>=1.2.0"]

[project.scripts]
notes-player = "notes_player.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/notes_player"]
